fix a few bugs in multianswer update js and hbs files

--- a/assets/multianswer-challenge-create.hbs
+++ b/assets/multianswer-challenge-create.hbs
@@ -48,13 +48,13 @@
                     <div class="col-md-2">
                         <div class="radio">
                             <label>
-                                <input type="radio" name="key_type[0]" value="0" checked>
+                                <input type="radio" name="key_type[0]" value="static" checked>
                                 Static
                             </label>
                         </div>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="key_type[0]" value="1">
+                                <input type="radio" name="key_type[0]" value="regex">
                                 Regex
                             </label>
                         </div>
