--- a/assets/multianswer-challenge-create.njk
+++ b/assets/multianswer-challenge-create.njk
@@ -50,8 +50,7 @@
 
 	<div class="form-group">
 		<select class="custom-select" name="key_type[0]">
-			<option value="static">Static</option>
-			<option value="regex">Regex</option>
+            <option value="correct">Correct</option>
             <option value="wrong">Wrong</option>
 		</select>
 	</div>
